support to return all loggers
