# service/src/main/scala/org/apache/celeborn/server/common/http/api/v1/ApiV1BaseResource.scala
@@ -35,7 +35,7 @@ class ApiV1BaseResource extends ApiRequestContext {
   @Path("conf")
   def conf: Class[ConfResource] = classOf[ConfResource]
 
-  @Path("logger")
+  @Path("loggers")
   def logger: Class[LoggerResource] = classOf[LoggerResource]
 
   @Path("/thread_dump")
